Minor ui update

--- a/web_app/assets/theme.css
+++ b/web_app/assets/theme.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ECE5DD;
+    background-color: #dfcab2;
     color: #212529;
     font-family: 'Segoe UI', sans-serif;
 }
